# Landing_Page_for_Viral_Marketing

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 기능-요청.md
.github/workflows/: build.yml  checks.yml  deploy.yml
apps/account/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_remove_account_account_type.py
apps/account/tests/: test_models.py  test_serializers.py  test_services.py
apps/analysis/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/analysis/migrations/: 0001_initial.py  0002_alter_analysis_about_alter_analysis_type.py
apps/analysis/tests/: test_models.py  test_serializers.py  test_tasks.py  test_view.py
apps/notification/: apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/notification/migrations/: 0001_initial.py
apps/notification/tests/: test_services.py  test_views.py
apps/transaction/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/transaction/migrations/: 0001_initial.py  0002_remove_transaction_user.py  0003_alter_transaction_category_and_more.py  0004_transaction_is_deleted.py  (+1 more)
apps/user/: admin.py  apps.py  models.py  serializers.py  service.py  signals.py  urls.py  views.py
apps/user/tests/: test_models.py  (+3 more)
apps/user_profile/: apps.py  models.py
config/: settings.py  urls.py
transaction/: apps.py  models.py  views.py
transaction/migrations/: 0001_initial.py
utils/: email.py
(+9 files in other folders)
